# robotics_software_ND

./: .gitignore  CHANGELOG.md  Readme.md
RoboND-MCL-Lab-master/: plot_mcl
RoboND-OccupancyGridMappingAlgorithm-master/: main.cpp  map_occu
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/pkgconfig/: first_package.pc  simple_arm.pc
catkin_ws/devel/lib/simple_arm/: simple_mover
catkin_ws/src/: ekf_lab.rviz  rvizlaunch.launch
catkin_ws/src/ball_chaser/: CMakeLists.txt  project_2_summary.md
catkin_ws/src/ball_chaser/launch/: ball_chaser.launch
catkin_ws/src/home_service_robot/: README.md
catkin_ws/src/home_service_robot/pick_objects/: CMakeLists.txt  package.xml
catkin_ws/src/home_service_robot/pick_objects/src/: pick_objects.cpp
catkin_ws/src/my_robot/: Readme.md  loc_proj_viz.rviz  package.xml
catkin_ws/src/robot_pose_ekf/: robot_pose_ekf.launch
catkin_ws/src/simple_arm/: CMakeLists.txt
simulation_gazebo/my_robot/: CMakeLists.txt  build_script.sh
simulation_gazebo/my_robot/script/: hello.cpp
simulation_gazebo/my_robot/world/: two_wheel_env
simulation_gazebo/project_1_build_my_world/: CMakeLists.txt  readme.md
simulation_gazebo/project_1_build_my_world/model/four_wheel/: model.config  model.sdf
simulation_gazebo/project_1_build_my_world/model/three_wheel_robot/: model.config  model.sdf
simulation_gazebo/project_1_build_my_world/model/two_wheel/: model.sdf
simulation_gazebo/project_1_build_my_world/script/: proj_1_plugin.cpp
simulation_gazebo/project_1_build_my_world/world/: project_1_single_floor_env
(+52 files in other folders)
